2001-04-02  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m-0.2.1-mnc.patch: Apply patch posted in [w3m-dev 01887].

	* w3m.el (w3m-w3m-dump-head-source): Follow change in MNC patch.
	(w3m-w3m-attributes): Ditto.

2001-04-02  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-crlf-to-lf): New function.
	(w3m-w3m-dump-head-source): Do crlf-to-lf when executable-type eq
	'cygwin.
	(w3m-w3m-dump-source): All time do crlf-to-lf function when
	executable-type eq 'cygwin.

2001-04-02  Taiki SUGAWARA <taiki.s@cityfujisawa.ne.jp>

	* w3m.el (w3m-exec-process): Guard the process from some errors.
	(w3m-copy-buffer): Restore view point with new window to the point in
	original window. 

2001-04-02  Hiroya Murata  <hiroya@use-ebisu.co.jp>

	* Makefile.in (Makefile): Depends on config.status instead of
	configure.
	(config.status): New rule.

2001-04-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_PATH_ICONDIR): Quote "$(data-directory)" in help-
	string.

2001-04-02  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-html-string-regexp): Make no exception of back-quote.
	(w3m-parse-attributes): Follow up above change.

2001-03-30  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-home-page): Default value is changed.
	(w3m-html-string-regexp): Support single quoted string.
	(w3m-parse-attributes): Import from w3m-form.el.
	(w3m-fontify-anchors): Fix bug reported in [emacs-w3m:00400].
	(w3m-external-view): Fix.
	(w3m-goto-url): Default argument is changed when it is
	interactively called.
	(w3m-browse-url): Fix.
	(w3m-about): Update.
	(w3m-about-history-except-regex): Add `about:'.

	* w3m-form.el: (w3m-parse-attributes): Exported.

	* mime-w3m.el (mime-w3m-save-background-color): Changed
	`edebug-form-spec'.

	* Makefile.in (dist): Improved.
	(Makefile, configure): New rules.
	(ECC, MODULES): Removed macros.

2001-03-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-with-elements): New macro.