@@ -1,3 +1,9 @@
+2001-04-02  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-hist.el (w3m-history-backward, w3m-history-forward): Allow
+	the optional argument `count'.
+	(w3m-history-backward-1, w3m-history-forward-1): New macros.
+
 2001-04-02  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
 
 	* w3m-0.2.1-mnc.patch: Apply patch posted in [w3m-dev 01887].
@@ -17,7 +23,7 @@
 
 	* w3m.el (w3m-exec-process): Guard the process from some errors.
 	(w3m-copy-buffer): Restore view point with new window to the point in
-	original window. 
+	original window.
 
 2001-04-02  Hiroya Murata  <hiroya@use-ebisu.co.jp>
 
